Feature:  - Updated dependencies  - Better search experience for movies [Source: nyaa/1337x]  - Added the possibility to download torrent file  - Added the chance to share magnet with a browser link to people  - Added copy magnet feature
